Actualización Versión Estable

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "rmunate/spell-number",
-    "description": "Convierta de números a letras, ideal para uso en facturas, remisiones o similares.",
+    "description": "Convierta de números a letras, ideal para uso en facturas, remisiones ó similares.",
     "keywords": [
         "letras",
         "numeros",
