--- a/composer.json
+++ b/composer.json
@@ -52,10 +52,17 @@
         "ext-intl": "*",
         "illuminate/support": "^8.0|^9.0|^10.0"
     },
-    "require-dev": {},
+    "require-dev": {
+        "phpunit/phpunit": "^10.4"
+    },
     "extra" : {
         "branch-alias" : {
             "dev-main": "1.0.x-dev"
+        },
+        "laravel": {
+            "providers": [
+                "Rmunate\\Utilities\\Providers\\SpellNumberProvider"
+            ]
         }
     },
     "minimum-stability": "dev",
