--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy VitePress site to Pages
 
 on:
     push:
-        branches: [ master ]
+        branches: [ main ]
 
     # Allows you to run this workflow manually from the Actions tab
     workflow_dispatch:
