--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,13 @@
     "name": "rmunate/spell-number",
     "description": "Easily convert numbers to letters, this library supports the native PHP INTL extension with which we can easily convert numbers to letters. This library provides us with the possibility of converting only to numbers or to currency formats depending on the language to be used, this package has support in the languages en: English, es: Spanish, pt: Portuguese, fr: French, it: Italian, ro: Romanian, fa: Farsi, hi: Hindi, pl: Polish.",
     "keywords": [
-        "letras",
         "towords",
         "toletters",
-        "números",
         "numbers",
         "spell",
+        "spell-number",
+        "spell-numbers",
+        "code-maestro",
         "rmunate"
     ],
     "homepage": "https://github.com/rmunate/SpellNumber",
@@ -44,6 +45,16 @@
         {
             "name": "Jens Twesmann",
             "homepage": "https://github.com/jetwes",
+            "role": "developer"
+        },
+        {
+            "name": "Gabriel Rausch",
+            "homepage": "https://github.com/gdsrmygdsrjr",
+            "role": "developer"
+        },
+        {
+            "name": "Alejandro Diaz",
+            "homepage": "https://github.com/alejandrodiazpinilla",
             "role": "developer"
         }
     ],
