correct the script to run the tests

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -46,4 +46,4 @@ jobs:
         composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
     - name: Execute Tests
-      run: ./vendor/bin/test ./test
+      run: ./vendor/bin/phpunit ./test
