--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,40 +10,31 @@ jobs:
       matrix:
         php: [8.2, 8.1 8.0]
         laravel: [10.*, 9.*, 8.*]
-        testbench: [8.*, 7.*, 6.*]
         include:
           - laravel: 10.*
             php: 8.2
-            dependency-version: prefer-stable
-          - laravel: 10.*
-            php: 8.1
-            dependency-version: prefer-stable
+            testbench: 8.*
           - laravel: 9.*
-            php: 8.2
-            dependency-version: prefer-stable
-          - laravel: 9.*
-            php: 8.1
-            dependency-version: prefer-stable
-          - laravel: 9.*
-            php: 8.0
-            dependency-version: prefer-stable
+            testbench: 7.*
+          - laravel: 8.*
+            testbench: 6.23
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }}
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: ${{ matrix.php }}
-        coverage: none
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+          coverage: none
 
-    - name: Install dependencies
-      run: |
-        composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
-        composer update --prefer-stable --prefer-dist --no-interaction
+      - name: Install dependencies
+        run: |
+          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
+          composer update --prefer-stable --prefer-dist --no-interaction
 
-    - name: Execute Tests
-      run: ./vendor/bin/phpunit ./test
+      - name: Execute Tests
+        run: ./vendor/bin/phpunit ./test
