--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,18 +8,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [8.2, 8.1 8.0]
-        laravel: [10.*, 9.*, 8.*]
+        php: [8.2, 8.1]
         include:
           - laravel: 10.*
-            php: 8.2
             testbench: 8.*
-          - laravel: 9.*
-            testbench: 7.*
-          - laravel: 8.*
-            testbench: 6.23
 
-    name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }}
+    name: PHP${{ matrix.php }} - L${{ matrix.laravel }}
 
     steps:
       - name: Checkout code
