--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [8.2, 8.1]
+        php: [8.2]
         include:
           - laravel: 10.*
             testbench: 8.*
